tests/baselines/reference/additionOperatorWithOnlyNullValueOrUndefinedValue.errors.txt
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts(2,10): error TS2365: Operator '+' cannot be applied to types '空值' and '空值'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts(3,10): error TS2365: Operator '+' cannot be applied to types '空值' and '未定'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts(4,10): error TS2365: Operator '+' cannot be applied to types '未定' and '空值'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts(5,10): error TS2365: Operator '+' cannot be applied to types '未定' and '未定'.


==== tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts (4 errors) ====
    // bug 819721
    var r1 = null + null;
             ~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and '空值'.
    var r2 = null + undefined;
             ~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and '未定'.
    var r3 = undefined + null;
             ~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '未定' and '空值'.
    var r4 = undefined + undefined;
             ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '未定' and '未定'.